# rooms

./: .gitignore  LICENSE.MIT  README.md
editor/: editor.py  engine.py  eventeditor.py  itemreqlistwidget.py  openfilerooms.py  roomgotolistwidget.py  roomitemlistwidget.py  roommanagerlistwidget.py  roommovelistwidget.py  roomreqlistwidget.py  roomslistwidget.py  upgradeversion.py  varslistwidget.py
editor/misc/: odict.py
editor/structdata/: __init__.py  image.py  itemRequirement.py  requirement.py  room.py  subject.py  varRequirement.py
engine/: engine.pro  make_android.sh
engine/android-frontend/: android-frontend.desktop  android-frontend.pro  controller.cpp  controller.h  main.cpp  qguidata.cpp  qguidata.h
engine/iphone-frontend/: iRooms_Prefix.pch
engine/qml-frontend/: controller.cpp  controller.h  graphics.cpp  graphics.h  main.cpp  qml-frontend.desktop  qml-frontend.pro  qml-frontend_harmattan.desktop
engine/qt4-frontend/: drawdevice.cpp  drawdevice.h  frontend.pro  main.cpp
engine/qt5-frontend/: drawdevice.cpp  drawdevice.h  frontend.pro
engine/src/: action.cpp  action.h  animation.cpp  animation.h  animationsengine.cpp  animationsengine.h  animationsmanager.cpp  animationsmanager.h  area.cpp  area.h  csmanager.cpp  csmanager.h  csparser.cpp  csparser.h  cutscenes_defaults.h  delayedanimation.cpp  delayedanimation.h  dialog.h  (+24 more)
engine/unittest/: CMakeLists.txt  actiontests.h  enginetests.cpp  enginetests.h  roomtests.h  unittest.pro  xmltests.h
engine/unittest/tests/: actiontests.h  enginetests.cpp  enginetests.h  main.cpp  tests.pro  xmltests.h
(+376 files in other folders)
